--- a/templates/dialogue/index.html.twig
+++ b/templates/dialogue/index.html.twig
@@ -3,18 +3,38 @@
 {% block title %}Hello DialogueController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h2>Nos conversations</h2>
+    <table class="table table-striped table-dark">
+        <thead>
+            <tr>
+                <th scope="col">Pseudo</th>
+                <th scope="col">Message</th>
+                <th scope="col">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for dialogue in dialogues %}
+            <tr>
+                <td>{{ dialogue.User.username}}</td>
+                <td>{{ dialogue.contenu }}</td>
+                <td>{{ dialogue.createdAt|date('d/m/y') }}</td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">Aucun enregistrement trouvé</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <h2>Nouveau message</h2>
+    {# {{ form(dialogueForm) }} #}
+    
+    {# <form>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Nouveau message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Envoyer</button>
+    </form> #}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/franc/sites/nap/src/Controller/DialogueController.php'|file_link(0) }}">src/Controller/DialogueController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/franc/sites/nap/templates/dialogue/index.html.twig'|file_link(0) }}">templates/dialogue/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
