--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
             <link rel="stylesheet" href='{{ asset('assets/css/index.css') }}'>
             <link rel="stylesheet" href='{{ asset('assets/css/menu.css') }}'>
             <link rel="stylesheet" href='{{ asset('assets/css/diesirae.css') }}'>
+            <link rel="stylesheet" href='{{ asset('assets/css/adherents.css') }}'>
             <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;900&display=swap" rel="stylesheet"> 
         {% endblock %}
     </head>
