--- a/templates/dialogue/index.html.twig
+++ b/templates/dialogue/index.html.twig
@@ -27,7 +27,7 @@
         </tbody>
     </table>
     <h2>Nouveau message</h2>
-    {# {{ form(dialogueForm) }} #}
+    {{ form(messageForm) }}
     
     {# <form>
         <div class="form-group">
