--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,8 @@
 /**--------------- Main -------------------**/
 
 body {
-    background-color: black;
-    color: white!important;
+    background-color: #353436;
+    color: #eed9b7!important;
     margin: 5;
     width: 100%;
     margin-left: auto;
@@ -33,4 +33,8 @@ body {
 
 .header {
     margin-top: 25px;
+}
+
+.deconnexion {
+    color: #b43e23;
 }
