--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}NAP-NewUser{% endblock %}
 
 {% block body %}
     <h1>Nouvel Utilisateur</h1>
