--- a/templates/includes/menu.html.twig
+++ b/templates/includes/menu.html.twig
@@ -2,7 +2,7 @@
         <div id="background_menuP">
             <a class="diesiraeP" href="{{path('diesirae')}}" title="DIES IRAE tribute Noir Désir">DIESIRAE</a>
             <a class="groupesP">groupes</a>
-            <a class="agendaP" href="#" title="AGENDA">agenda</a>
+            <a class="agendaP" href="{{path('bands')}}" title="AGENDA">agenda</a>
             <a class="normP" href="{{path ('app_home')}}" title="ACCUEIL">NORM'AND</a>
             <a class="associationP" href="{{path('association')}}" title="ASSOCIATION"> association</a>
             <a class="bismuthP" href="#" title="BISMUTH">BISMUTH</a>
