--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -19,7 +19,7 @@
 		<div id="background_menu">
 			<a class="diesirae" href="{{path('diesirae')}}" title="DIES IRAE tribute Noir Désir">DIESIRAE</a>
 			<a class="groupes">groupes</a>
-			<a class="agenda" href="{{path('bands')}}" title="AGENDA">agenda</a>
+			<a class="agenda" href="{{path('concert')}}" title="AGENDA">agenda</a>
 			<a class="norm" href="{{path ('app_home')}}" title="ACCUEIL">NORM'AND</a>
 			<a class="association" href="{{path('association')}}" title="ASSOCIATION">association</a>
 			<a class="bismuth" href="#" title="BISMUTH">BISMUTH</a>
