--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,4 +1,4 @@
 <h1>Nouveau contact</h1>
-<p>Nom : {{ contact.nom }}</p>
+<p class="form-control-sm" placeholder="Nom"{{ contact.nom }}</p>
 <p>Email : {{ contact.email }}</p>
 <p>Message : {{ contact.message|raw }}</p>
