24_08 avant passage Julien

--- a/public/assets/css/diesirae.css
+++ b/public/assets/css/diesirae.css
@@ -1,8 +1,3 @@
-.text-center {
-    margin: 20px;
-}
-
-.imgDies {
-    display: flex;
-    justify-content: space-around;
+.text-justify {
+    margin: 30px 100px;
 }
