--- a/templates/pages/association.html.twig
+++ b/templates/pages/association.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
 
 <div id="textAssociation">
-        <p id="titreAssociation">Norm'And'Prod</p>
-        <p>Norm’and.prod est né en 2018 suite à une reflexion des membres du groupe tribute Noir Désir «DIES IRAE».
+        <h3>Norm'And'Prod</h3>
+        <p id="textAssoc">Norm’and.prod est né en 2018 suite à une reflexion des membres du groupe tribute Noir Désir «DIES IRAE».
         Jouer depuis quelques années dans les bars, les pubs étaient fort sympathiques et formateur mais les propositions
-        pour jouer dans des festivales et événements plus importants nécessitaient de faire des contrats de production.
+        pour jouer dans des festivals et événements plus importants nécessitaient de faire des contrats de production.
         Passer à coté de ces propositions n’étaient plus possible, norm’And.Prod à pris vie.
         Le choix a été fait d’être une association à but non lucratif, de ne pas rentrer dans un systeme de «fric».
         Dès lors DiES IRAE a pu enchainer des festivales... mais l’aventure ne s’arrête pas là.
         Norm’and.Prod à pu investire dans du matériel et semi-professionnaliser les représentations du groupe.
-        Depuis, d’autres groupes ont été accueilli au sein de l’association et les projets ne manquent pas.<br>
-        N’hésitez pas à nous contacter si besoin d’aide, d’infos...</p>
+        Depuis, d’autres groupes ont été accueilli au sein de l’association et les projets ne manquent pas.
+        N’hésitez pas à nous <a class="contactText" href="{{path ('contact')}}" title="contact">contacter</a> si besoin d’aide, d’infos...</p>
 </div>
 {% endblock %}
