--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('user/_form.html.twig') }}
 
-    <a type="button" class="btn btn-light btn-lg btn-block" href="{{ path('user_index') }}">Retour liste</a>
+    <a type="button" class="btn btn-warning btn-lg btn-block" href="{{ path('user_index') }}">Retour liste</a>
 {% endblock %}
