--- a/public/assets/css/adherents.css
+++ b/public/assets/css/adherents.css
@@ -1,10 +1,9 @@
 /**-------- espace adhrents --------**/
 
 #textAdherents {
-    margin: 70px;
+    margin: 0px 300px;
     font-size: 15px;
     text-align: center;
-    display: flex;
 }
 
 #textAdhrents p {
@@ -12,23 +11,30 @@
     font-weight: normal;
 }
 
-#titreAdherents,
+#titreAdherents {
+    font-size: 40px;
+    color: #dc0d12;
+}
+
+#titreExprime {
+    font-size: 30px;
+    color: #dc0d12;
+}
+
 #titreDocuments {
-    writing-mode: vertical-rl;
-    text-orientation: upright;
-    font-size: 20px;
+    font-size: 30px;
     color: #dc0d12;
 }
 
 #resumeAdhrents {
-    padding-top: 100px;
+    padding-top: 10px;
 }
 
 
 /**-------- Les dirigeants --------**/
 
 #titreDirigeants {
-    font-size: 20px;
+    font-size: 30px;
     color: #dc0d12;
 }
 
@@ -44,37 +50,17 @@
     justify-content: space-between;
 }
 
+.imgTresorierAdj,
+.imgPresident,
+.imgSecretaireAdj,
+.imgTresorier,
+.imgSecretaire {
+    margin: 10px 10px;
+}
+
 #blocs img {
     width: 150px;
     height: 150px;
-}
-
-.colonne {
-    margin: 15px 25px 0 25px;
-    padding: 0;
-}
-
-.colonne:last-child {
-    padding-bottom: 60px;
-}
-
-.colonne::after {
-    content: '';
-    clear: both;
-    display: block;
-}
-
-.colonne div {
-    position: relative;
-    float: left;
-    width: 200px;
-    height: 150px;
-    margin: 0 0 0 35px;
-    padding: 0;
-}
-
-.colonne div:first-child {
-    margin-left: 0;
 }
 
 #tofDirigeants {
@@ -87,6 +73,15 @@
 }
 
 
+/** ----------------- PDF ----------------------- **/
+
+.imgPDF {
+    margin: 5px 10px;
+}
+
+.table {}
+
+
 /**------------------ HOVER ADHERENTS -----------------**/
 
 #blocPresident,
@@ -97,4 +92,8 @@
     -webkit-transform: scale(1.3);
     transform: scale(1.1);
     transition-duration: 1s;
+}
+
+.rafraichir:hover {
+    text-decoration: none;
 }
