--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,7 +3,6 @@
 body {
     background-color: #353436;
     color: #eed9b7!important;
-    margin: 5;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -19,6 +18,32 @@ body {
 }
 
 
+/** ------------- association -------------**/
+
+.contactText {
+    color: #587f9e!important;
+    text-decoration: none;
+}
+
+#textAssoc {
+    margin: 10px 200px;
+    text-align: justify;
+}
+
+
+/** ----------- formulaire inscription newsletter ----- **/
+
+
+/* .champs {
+    width: 400px;
+} */
+
+
+/* #formSub {
+    text-align: center;
+} */
+
+
 /** ------------- FOOTER ----------------- **/
 
 .copyright {
@@ -26,6 +51,27 @@ body {
     bottom: 0;
     left: 0;
     right: 0
+}
+
+#mentionsL {
+    margin: 10px 200px;
+    text-align: justify;
+}
+
+.mentions {
+    color: #587f9e;
+    text-decoration: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
+/** ---------- Bismuth ----------**/
+
+#textBismuth {
+    text-align: justify;
 }
 
 
