--- a/templates/adherents/index.html.twig
+++ b/templates/adherents/index.html.twig
@@ -1,139 +1,149 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdherentsController!{% endblock %}
+{% block title %}NAP-Espace adhérents
+{% endblock %}
 
 {% block body %}
-    <div id="adherents">
+	<div id="adherents">
 
-        <div id="textAdherents">
-            <p id="titreAdherents">Espace adhérents</p>
-            <p id="resumeAdhrents">Chers adhérents, bienvenue dans vôtre espace Norm’And.Prod.
-                Vous y trouverez toutes les infos dont vous aurez besoins, les règles de l’association,
-                les comptes rendus de réunions, les projets, numéros de téléphones, mails, ainsi qu’un espace blog pour discuter.
-                À bientôt</p>
-        </div>
+		<div id="textAdherents">
+			<p id="titreAdherents">Espace adhérents</p>
+			<p id="resumeAdhrents">Chers adhérents, bienvenue dans vôtre espace Norm’And.Prod.
+																				Vous y trouverez toutes les infos dont vous aurez besoins, les règles de l’association,
+																				les comptes rendus de réunions, les projets, numéros de téléphones, mails, ainsi qu’un espace blog pour discuter.
+																				À bientôt
+			</p>
+		</div>
+		<br><br><br>
 
-        <br><br>
+		<div id="dirigeants">
+			<p id="titreDirigeants">Les dirigeants</p><br><br>
+			<div id="blocs">
+				<div id="blocTresorierAdj">
+					<img class="imgTresorierAdj" src="{{ asset('assets/images/avatarmick.png') }}"><br>
+					<p class="textTresorierAdj">
+						Trésorier adjoint<br>
+						Benicourt Mickael<br>
+						06 00 00 00 00
+					</p>
+				</div>
 
-        <div id="dirigeants">
-            <p id="titreDirigeants">Les dirigeants</p><br><br>
+				<div id="blocTresorier">
+					<img class="imgTresorier" src="{{ asset('assets/images/avatarfranck.png') }}"><br>
+					<p class="textTresorier">
+						Trésorier<br>
+						Lechangeur Franck<br>
+						06 00 00 00 00
+					</p>
+				</div>
 
-            <div id="blocs">
-                <div id="blocPresident">
-                    <img class="imgPresident" src="{{ asset('images/loloavatar.png') }}"><br>
-                    <p class="textPresident">
-                        Président<br>
-                        Acard Laurent<br>
-                        06 00 00 00 00
-                    </p>
-                </div>
+				<div id="blocPresident">
+					<img class="imgPresident" src="{{ asset('assets/images/avatarlolo.png') }}"><br>
+					<p class="textPresident">
+						Président<br>
+						Acard Laurent<br>
+						06 00 00 00 00
+					</p>
+				</div>
 
-                <div id="blocTresorier">
-                    <img class="imgTresorier" src="{{ asset('images/franckavatar.png') }}"><br>
-                    <p class="textTresorier">
-                        Trésorier<br>
-                        Lechangeur Franck<br>
-                        06 00 00 00 00
-                    </p>
-                </div>
+				<div id="blocSecretaire">
+					<img class="imgSecretaire" src="{{ asset('assets/images/avatarguigui.png') }}"><br>
+					<p class="textSecretaire">
+						Sectrétaire<br>
+						Bouquerel Guillaume<br>
+						06 00 00 00 00
+					</p>
+				</div>
 
-                <div id="blocSecretaire">
-                    <img class="imgSecretaire"
-                        src="{{ asset('images/guiguiavatar.png') }}"><br>
-                    <p class="textSecretaire">
-                        Sectrétaire<br>
-                        Bouquerel Guillaume<br>
-                        06 00 00 00 00
-                    </p>
-                </div>
+				<div id="blocSecretaireAdj">
+					<img class="imgSecretaireAdj" src="{{ asset('assets/images/avatarju.png') }}"><br>
+					<p class="textSecretaireAdj">
+						Secrétaire adj<br>
+						Marie Julien<br>
+						06 00 00 00 00
+					</p>
+				</div>
+			</div>
+		</div>
+		<br><br>
 
-                <div id="blocSecretaireAdj">
-                    <img class="imgSecretaireAdj" src="{{ asset('images/juavatar.png') }}"><br>
-                    <p class="textSecretaireAdj">
-                        Secrétaire adj<br>
-                        Marie Julien<br>
-                        06 00 00 00 00
-                    </p>
-                </div>
+		<div id="documents">
+			<p id="titreDocuments">Les documents</p><br>
 
-                <div id="blocTresorierAdj">
-                    <img class="imgTresorierAdj" src="{{ asset('images/mickavatar.png') }}"><br>
-                    <p class="textTresorierAdj">
-                        Trésorier adjoint<br>
-                        Benicourt Mickael<br>
-                        06 00 00 00 00
-                    </p>
-                </div>
-            </div>
+			<a href="{{ asset('assets/pdf/charteNAP.pdf') }}" target="_blank">
+				<img class="imgPDF" src="{{ asset('assets/images/charte.png')|imagine_filter('pdf') }}">
+			</a>
 
-        </div>
+			<a href="{{ asset('assets/pdf/statutNAP.pdf') }}" target="_blank">
+				<img class="imgPDF" src="{{ asset('assets/images/statut.png')|imagine_filter('pdf') }}">
+			</a>
 
-        <br><br>
+			<a href="{{ asset('assets/pdf/NAPpv270419.pdf') }}" target="_blank">
+				<img class="imgPDF" src="{{ asset('assets/images/pv1.png')|imagine_filter('pdf') }}">
+			</a>
 
-{# <div class="zoom colonne">
-<div>
-<div id="tofDirigeants"><img src="{{ asset('images/loloavatar.png') }}" /></div>
-</div>
-<div>
-<div id="tofDirigeants"><img src="{{ asset('images/franckavatar.png') }}" /></div>
-</div>
-<div>
-<div id="tofDirigeants"><img src="{{ asset('images/guiguiavatar.png') }}" /></div>
-</div>
-<div>
-<div id="tofDirigeants"><img src="{{ asset('images/juavatar.png') }}" /></div>
-</div>
-<div>
-<div id="tofDirigeants"><img src="{{ asset('images/mickavatar.png') }}" /></div>
-</div>
-</div> #}
+			<a href="{{ asset('assets/pdf/bulletinAdhesionNAP.pdf') }}" target="_blank">
+				<img class="imgPDF" src="{{ asset('assets/images/bulletin.png')|imagine_filter('pdf') }}">
+			</a>
+		</div>
+		<br>
+		<h2>Ajouter un document</h2>
+		{{ form_start(uploadForm) }}
+			<div class="form-group w-50">
+				<div class="form-control-file">
+				{{ form(uploadForm) }}
+				</div>
+			</div>
+		{{ form_end(uploadForm) }}
 
-        <br><br>
 
-        <div id="documents">
-            <p id="titreDocuments">Les documents</p>
-        </div>
+			<br><br>
 
-        <br><br>
+			<div id="exprime">
+				<p id="titreExprime">Exprimez-vous</p>
 
-        <div id="exprime">
-            <p id="titreExprime">Exprimez-vous</p>
+				<form action="{{ path('adherents') }}">
+					<input class="btn btn-primary" type="submit" value="Rafraichir les messages"/>
+				</form>
+				{# <input type="button" value="Rafraichir" id="refresh" /> #}
+				<br><br>
 
-        <table class="table table-striped table-info">
-        <thead>
-            <tr>
-                <th scope="col">Pseudo</th>
-                <th scope="col">Message</th>
-                <th scope="col">Date</th>
-                {% if is_granted('ROLE_ADMIN') %}
-                    <th>coucou</th>
-                {% endif %}
-            </tr>
-        </thead>
-        <tbody>
-        {% for dialogue in dialogues %}
-            <tr>
-                <td>{{ dialogue.User.username}}</td>
-                <td>{{ dialogue.contenu }}</td>
-                <td>{{ dialogue.createdAt|date('d/m/y') }}</td>
-                {% if is_granted('ROLE_ADMIN') %}
-                <td>
-                    <a href='{{path('delete_dialogue', {'id':dialogue.id})}}' type="button" class="btn btn-danger">X</a>
-                </td>
-                {% endif %} 
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">Aucun enregistrement trouvé</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <h2>Nouveau message</h2>
-    {{ form_start(messageForm) }}
-    {{ form(messageForm) }}
-    {{ form_end(messageForm) }}
+				<table class="table table-striped table-light">
+					<thead>
+						<tr>
+							<th scope="col">Pseudo</th>
+							<th scope="col">Message</th>
+							<th scope="col">Date/Heure</th>
+							{% if is_granted('ROLE_ADMIN') %}
+								<th>Supprimer</th>
+							{% endif %}
+						</tr>
+					</thead>
+					<tbody class="tDialogue">
+						{% for dialogue in dialogues %}
+							<tr>
+								<td>{{ dialogue.User.username}}</td>
+								<td>{{ dialogue.contenu }}</td>
+								<td>{{ dialogue.createdAt|date('d/m/y H:i') }}</td>
+								{% if is_granted('ROLE_ADMIN') %}
+									<td>
+										<a href='{{path('delete_dialogue', {'id':dialogue.id})}}' type="button" class="btn btn-danger">X</a>
+									</td>
+								{% endif %}
+							</tr>
+						{% else %}
+							<tr>
+								<td colspan="6">Aucun enregistrement trouvé</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+				<br>
+				<h2>Nouveau message</h2>
+				{{ form_start(messageForm) }}
+				{{ form(messageForm) }}
+					{{ form_end(messageForm) }}
 
-        </div>
-    </div> 
-{% endblock %}
+				</div>
+			</div>
+		{% endblock %}
