--- a/templates/concert/index.html.twig
+++ b/templates/concert/index.html.twig
@@ -2,43 +2,58 @@
 
 {% form_theme concertsForm 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}NAP-Concerts{% endblock %}
+{% block title %}NAP-Concerts
+{% endblock %}
 
 {% block body %}
-<h2>Prochains concerts</h2>
-        <tbody>
-        {% for concert in concerts %}
-            {% if date(concert.date) > date() %}
-                <p>
-                    {{ concert.date|date('d/m/y')}}
-                    {{ concert.nom }}
-                    {{ concert.band }}
-                    {{ concert.heure|date('H,i,s') }}
-                </p>
-            {% endif %}
-        {% else %}
-            <p colspan="6">Aucun concert trouvé</p>
-        {% endfor %}
-        </tbody>
-        <br>
 
-        <h2>Concerts passés</h2>
-        <tbody>
-        {% for concert in concerts %}
-            {% if date(concert.date) < date() %}
-                <p>
-                    {{ concert.date|date('d/m/y')}}
-                    {{ concert.nom }}
-                    {{ concert.band }}
-                </p>
-            {% endif %}
-        {% else %}
-            <p colspan="6">Aucun concert trouvé</p>
-        {% endfor %}
-        </tbody>
-        {% if is_granted('ROLE_ADMIN') %}
-        {{ form_start(concertsForm) }}
-        {{ form_widget(concertsForm) }}
-        {{ form_end(concertsForm) }}
-        {% endif %}
+	{% for message in app.flashes('message') %}
+		<div class="alert alert-success" role="alert">{{ message }}</div>
+	{% endfor %}
+
+    <h3>Inscription Newsletter</h3>
+	<br>
+	<p>Pour recevoir les nouvelles dates de concerts</p>
+	<div id="formSub">
+	{{ form_start(subscriberForm) }}
+	{{ form(subscriberForm) }}
+	{{ form_end(subscriberForm) }}
+	</div>
+
+	<h2>Prochains concerts</h2>
+	<tbody>
+		{% for concert in concerts %}
+			{% if date(concert.date) > date() %}
+				<p>
+					{{ concert.date|date('d/m/y')}}
+					{{ concert.nom }}
+					{{ concert.band }}
+					{{ concert.heure|date('H:i') }}
+				</p>
+			{% endif %}
+		{% else %}
+			<p colspan="6">Aucun concert trouvé</p>
+		{% endfor %}
+	</tbody>
+	<br>
+
+	<h2>Concerts passés</h2>
+	<tbody>
+		{% for concert in concerts %}
+			{% if date(concert.date) < date() %}
+				<p>
+					{{ concert.date|date('d/m/y')}}
+					{{ concert.nom }}
+					{{ concert.band }}
+				</p>
+			{% endif %}
+		{% else %}
+			<p colspan="6">Aucun concert trouvé</p>
+		{% endfor %}
+	</tbody>
+	{% if is_granted('ROLE_ADMIN') %}
+			{{ form_start(concertsForm) }}
+			{{ form_widget(concertsForm) }}
+			{{ form_end(concertsForm) }}
+	{% endif %}
 {% endblock %}
