--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -1,1 +1,2 @@
-<p class="copyright">Copyright &copy; 2020 Flechprod</p>
+<a class="mentions" href="{{path ('mentions')}}" title="Mentions légales">Mentions légales</a>
+<p class="copyright">&copy; 2020 Flechprod</p>
