--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}NAP-User{% endblock %}
 
 {% block body %}
     <h1>Utilisateurs NAP</h1>
